--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kubemcp",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "MCP server for managing MicroK8s clusters via Cursor IDE",
   "main": "dist/index.js",
   "type": "module",
@@ -16,7 +16,10 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
     "typecheck": "tsc --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prepublishOnly": "pnpm run build && pnpm test",
+    "version": "pnpm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "keywords": [
     "mcp",
@@ -25,11 +28,12 @@
     "cursor",
     "model-context-protocol"
   ],
-  "author": "",
+  "author": "icy-r <asath12882@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.0.4",
     "@kubernetes/client-node": "^0.22.0",
+    "@modelcontextprotocol/sdk": "^1.0.4",
+    "@toon-format/toon": "^0.7.0",
     "execa": "^9.5.2"
   },
   "devDependencies": {
@@ -51,4 +55,3 @@
     "node": ">=18.0.0"
   }
 }
-
