Update CI and release workflows to run tests only for log-processor.test.ts, removing formatter.test.ts from the test suite.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         run: pnpm run typecheck
 
       - name: Run tests
-        run: pnpm test -- tests/log-processor.test.ts tests/formatter.test.ts
+        run: pnpm test -- tests/log-processor.test.ts
 
       - name: Build project
         run: pnpm run build
