--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Run tests
-        run: pnpm test -- tests/log-processor.test.ts tests/formatter.test.ts
+        run: pnpm test -- tests/log-processor.test.ts
 
       - name: Build project
         run: pnpm run build
