--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kubemcp",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "MCP server for managing MicroK8s clusters via Cursor IDE",
   "main": "dist/index.js",
   "type": "module",
@@ -33,7 +33,7 @@
     "format:check": "prettier --check \"src/**/*.ts\"",
     "typecheck": "tsc --noEmit",
     "prepare": "husky install",
-    "prepublishOnly": "pnpm run build && pnpm test",
+    "prepublishOnly": "pnpm run build",
     "version": "pnpm run format && git add -A src",
     "postversion": "git push && git push --tags"
   },
