--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,9 @@
-name: Publish to NPM
+name: Publish to NPM (Manual)
+
+# NOTE: Automatic publishing now happens in release.yml workflow
+# This workflow is kept for manual publishing only
 
 on:
-  release:
-    types: [created]
   workflow_dispatch:
     inputs:
       version:
